--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "cogo-toast": "^4.2.3",
+    "firebase": "^9.6.8",
     "react": "^17.0.2",
+    "react-country-region-selector": "^3.4.0",
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.28.0",
     "react-icons": "^4.3.1",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
