--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
     "cogo-toast": "^4.2.3",
     "firebase": "^9.6.8",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-country-region-selector": "^3.4.0",
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.2",
